--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.foto-perfil{
+  width: 200px; height: 200px;
+  position: relative;
+}
+.user-info{
+  position: relative;
+  display: inline-block;
+}
+ul{
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+  display: block;
+}
